# one-rom-wasm

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  README.md  build.sh  footer.html  gen.html  index.html  package-lock.json  package.json  style.css  test.sh  visualizer.html
.github/workflows/: deploy.yml
docs/: index.html  modules.html
docs/assets/: navigation.js  search.js
docs/classes/: PluginCatalog.html  ValuePrettyPair.html  VersionInfo.html  WasmGenBuilder.html  WasmImages.html
docs/functions/: accept_license.html  board_info.html  boards.html  boards_for_mcu_family.html  chip_type_aliases.html  chip_type_info.html  chip_types.html  default.html  extra_chip_types_for_board.html  gen_add_file.html  gen_build.html  gen_build_validation.html  gen_builder_from_json.html  gen_categories.html  gen_description.html  gen_file_specs.html  gen_licenses.html  init.html  initSync.html  mcu_chip_id.html  mcu_flash_base.html  mcu_info.html  mcus.html  mcus_for_mcu_family.html  parse_firmware.html  plugin_catalog.html  resolve_plugin_label.html  rom_type_info.html  rom_types.html  supported_chip_type_aliases.html  supported_chip_types.html  version.html  versions.html
docs/interfaces/: AddressPin.html  BoardInfo.html  ChipTypeInfo.html  ControlLine.html  DataPin.html  DeviceSummary.html  InitOutput.html  McuInfo.html  PowerPin.html  ProgrammingPin.html  RomSummary.html  RomTypeInfo.html  WasmFileSpec.html  WasmLicense.html  WasmPluginRelease.html
docs/types/: InitInput.html  SyncInitInput.html
js/: config.js  footer.js  gen.js
json/: c64-no-destestmax.json  c64.json  gen-test.json
pkg/: README.md  onerom_wasm.d.ts  onerom_wasm.js  onerom_wasm_bg.wasm  onerom_wasm_bg.wasm.d.ts  package.json
releases/: index.html
releases/v0.1.1/: index.html
releases/v0.1.1/docs/: index.html  modules.html
releases/v0.1.1/js/: footer.js
releases/v0.1.1/pkg/: index.html  onerom_wasm_bg.wasm  package.json
releases/v0.1.2/docs/: modules.html
releases/v0.1.2/js/: gen.js
releases/v0.1.2/pkg/: onerom_wasm_bg.wasm  onerom_wasm_bg.wasm.d.ts  package.json
releases/v0.1.3/docs/: index.html
releases/v0.1.3/js/: gen.js
releases/v0.1.3/pkg/: onerom_wasm.js  onerom_wasm_bg.wasm  onerom_wasm_bg.wasm.d.ts  package.json
releases/v0.1.4/: gen.html
releases/v0.1.4/pkg/: onerom_wasm_bg.wasm  package.json
releases/v0.1.5/pkg/: onerom_wasm.d.ts  onerom_wasm.js  onerom_wasm_bg.wasm  onerom_wasm_bg.wasm.d.ts  package.json
releases/v0.1.6/pkg/: onerom_wasm.d.ts  onerom_wasm.js  onerom_wasm_bg.wasm  package.json
releases/v0.1.7/pkg/: onerom_wasm.d.ts  onerom_wasm_bg.wasm  package.json
releases/v0.1.8/pkg/: onerom_wasm.d.ts  onerom_wasm.js  package.json  (+2 more)
releases/v0.2.1/: index.html
releases/v0.3.11/: style.css
releases/v0.3.12/: LICENSE.md
releases/v0.3.4/: footer.html
releases/v0.3.8/: 404.html
releases/v0.4.0/: index.html
scripts/: generate-listings.sh  generate-pkg-index.sh  html-utils.sh
src/: lib.rs
(+393 files in other folders)
