[package]
name = "onerom-wasm"
version = "0.1.5"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM Supporting Tooling Web Assembly Implementation"
repository = "https://github.com/piersfinlayson/one-rom-wasm"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[lib]
crate-type = ["cdylib"]
name = "onerom_wasm"
path = "src/lib.rs"

[dependencies]
onerom-config = { git = "https://github.com/piersfinlayson/one-rom", branch = "releases/v0.5.4", version = "0.2.2" }
onerom-gen = { git = "https://github.com/piersfinlayson/one-rom", branch = "releases/v0.5.4", version = "0.2.0" }
sdrr-fw-parser = { git = "https://github.com/piersfinlayson/one-rom", branch = "releases/v0.5.4", version = "0.5.4", default-features = false }

console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
tsify = { version = "0.5.6", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
