[package]
name = "onerom-wasm"
version = "0.4.1"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM Supporting Tooling Web Assembly Implementation"
repository = "https://github.com/piersfinlayson/one-rom-wasm"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[lib]
crate-type = ["cdylib"]
name = "onerom_wasm"
path = "src/lib.rs"

[dependencies]
onerom-app = { version = "0.1.2" }
onerom-config = { version = "0.5.2" }
onerom-gen = { version = "0.6.2" }
onerom-fw-parser = { version = "0.7.2", default-features = false }
airfrog-rpc = { version="^0.1.2" }

console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
tsify = { version = "0.5.6", features = ["js"] }
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
